# rechain

./: .CMakeLists.txt.swo  .appveyor.yml  .gitignore  .makefile.swo  .makefile.swp  .travis.yml  .travis.yml.swp  CMakeLists.txt  ERRORS  GUIDE.md  README.md  algparam.h.gcov  aligned_buffer.h.gcov  alloc_traits.h.gcov  allocated_ptr.h.gcov  allocator.h.gcov  argnames.h.gcov  asn.h.gcov  atomicity.h.gcov  basecode.h.gcov  basic_string.h.gcov  basic_string.tcc.gcov  block.cpp  block.hpp  block.hpp.gcov  catch.hpp.gcov  char_traits.h.gcov  chrono.gcov  configure.sh  cryptlib.h.gcov  data.hpp.gcov  data_bkp.cpp  data_bkp.hpp  documentation.config  doxygen.conf  error.hpp.gcov  exception.gcov  exception_ptr.h.gcov  filters.h.gcov  gmon.out  (+57 more)
.hooks/: pre-commit
data/: .~lock.rechain.odt#  notes.txt  rechain.blockchain  rechain.odt  user1.public  valgrind.supp
data/bkp/: block.cpp  block.hpp  keys.cpp  keys.hpp
data/home/: current.private  current.public  rechain.blockchain  rechain.config
data/keys/: user2.public
data/scripts/: configure.sh
docs/: README_8md_source.html  annotated.html  annotated_dup.js  base__record_8cpp_source.html  base__record_8hpp.html  base__record_8hpp.js  base__record_8hpp__dep__incl.map  base__record_8hpp__dep__incl.md5  base__record_8hpp__incl.map  base__record_8hpp__incl.md5  base__record_8hpp_source.html  block_8cpp_source.html  block_8hpp_source.html  blockchain_8cpp_source.html  blockchain_8hpp.html  blockchain_8hpp.js  blockchain_8hpp__dep__incl.map  blockchain_8hpp__dep__incl.md5  blockchain_8hpp__incl.dot  blockchain_8hpp__incl.map  blockchain_8hpp__incl.md5  blockchain_8hpp_source.html  classBaseRecord-members.html  classBaseRecord.html  classBaseRecord.js  classBaseRecord__inherit__graph.map  classBaseRecord__inherit__graph.md5  classBlock-members.html  classBlock.html  classBlock.js  classBlockChain-members.html  classBlockChain.html  classBlockChain.js  classBlockChain__coll__graph.map  classBlockChain__coll__graph.md5  classBlockchain-members.html  classBlockchain.html  classBlockchain.js  classConfig-members.html  classConfig.html  (+242 more)
docs/html/: README_8md_source.html  annotated.html  annotated_dup.js  basic__block_8cpp.js  basic__block_8cpp__incl.map  basic__block_8hpp.html  basic__block_8hpp__dep__incl.map  basic__block_8hpp__incl.map  basic__block_8hpp__incl.md5  block_8cpp.html  block_8cpp__incl.map  block_8cpp__incl.md5  block_8cpp_source.html  block_8hpp.html  block_8hpp__dep__incl.map  block_8hpp__dep__incl.md5  block_8hpp__incl.md5  block_8hpp_source.html  blockchain_8cpp.html  blockchain_8cpp__incl.map  blockchain_8cpp__incl.md5  blockchain_8cpp_source.html  blockchain_8hpp.html  blockchain_8hpp__dep__incl.map  blockchain_8hpp__dep__incl.md5  blockchain_8hpp__incl.map  blockchain_8hpp__incl.md5  blockchain_8hpp_source.html  classBasicBlock.html  classBasicBlock.js  classBasicBlock__inherit__graph.md5  classBlock-members.html  classBlock.html  classBlock.js  classBlockChain-members.html  classBlockChain.html  classBlockChain.js  classBlock__coll__graph.md5  classData-members.html  classData.html  (+132 more)
docs/latex/: annotated.tex  classBlock.tex  classBlockChain.tex  classKeyPair.tex  classcxxopts_1_1KeyValue.tex  classcxxopts_1_1OptionAdder.tex  classcxxopts_1_1OptionAdder__coll__graph.md5  classcxxopts_1_1OptionDetails.tex  classcxxopts_1_1OptionException.tex  classcxxopts_1_1OptionException__coll__graph.md5  classcxxopts_1_1OptionException__inherit__graph.md5  classcxxopts_1_1OptionParseException.tex  classcxxopts_1_1OptionParseException__coll__graph.md5  classcxxopts_1_1OptionParseException__inherit__graph.md5  classcxxopts_1_1OptionSpecException.tex  classcxxopts_1_1OptionSpecException__coll__graph.md5  classcxxopts_1_1OptionSpecException__inherit__graph.md5  classcxxopts_1_1OptionValue.tex  classcxxopts_1_1Options.tex  classcxxopts_1_1ParseResult.tex  classcxxopts_1_1Value.tex  classcxxopts_1_1Value__coll__graph.md5  classcxxopts_1_1Value__inherit__graph.md5  classcxxopts_1_1argument__incorrect__type.tex  classcxxopts_1_1option__exists__error.tex  (+34 more)
html/: README_8md_source.html  annotated.html  basic__block_8cpp.html  basic__block_8cpp__incl.md5  basic__block_8cpp_source.html  basic__block_8hpp.js  basic__block_8hpp__dep__incl.md5  basic__block_8hpp_source.html  block_8cpp.js  block_8cpp__incl.md5  block_8cpp_source.html  block_8hpp.html  block_8hpp__incl.map  block_8hpp__incl.md5  block_8hpp_source.html  blockchain_8cpp__incl.map  blockchain_8cpp_source.html  blockchain_8hpp_source.html  classBasicBlock-members.html  classBasicBlock__inherit__graph.map  classBlock-members.html  classBlock.html  classBlock.js  classBlockChain.js  classBlockChain__coll__graph.map  classBlockChain__coll__graph.md5  classData-members.html  classData.html  classData.js  classDataBlock__coll__graph.map  classDataBlock__inherit__graph.md5  classKey-members.html  classKey.html  classKeyPair-members.html  classKeyPair__coll__graph.md5  classKeyPair_a8c2ee218561f276670bac9042671883e_cgraph.md5  classKeyPair_abb76e1352cd09330bcb427db9427d0fe_cgraph.map  classKey__coll__graph.md5  classPrivateKey-members.html  classPrivateKey.html  (+109 more)
inc/: .blockchain.hpp.swp  .manager.hpp.swn  base_record.hpp  basic_block.hpp  block.hpp  blockchain.hpp  config.hpp  data.hpp  data_block.hpp  enums.hpp  error.hpp  genesis_record.hpp  interface.hpp  keys.hpp  logger.hpp  manager.hpp  message.hpp  publication_record.hpp  record.hpp  remote.hpp  settings.hpp  signature_block.hpp  signature_record.hpp  utility.hpp
src/: .block.cpp.swp  .blockchain.cpp.swo  .blockchain.cpp.swp  .manager.cpp.swn  base_record.cpp  basic_block.cpp  block.cpp  blockchain.cpp  config.cpp  data.cpp  data_block.cpp  genesis_record.cpp  interface.cpp  keys.cpp  main.cpp  manager.cpp  message.cpp  publication_record.cpp  record.cpp  remote.cpp  settings.cpp  signature_block.cpp  signature_record.cpp
test/: .test-block.cpp.swp  block.cpp  blockchain.cpp  test-block.cpp  test-blockchain.cpp  test-data.cpp  test-functions.cpp  test-interface.cpp  test-keys.cpp  test-main.cpp  test-record.cpp  test-remote.cpp
(+195 files in other folders)
